[package]
name = "divvunspell"
version = "0.4.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT/Apache-2.0"

[[bin]]
name = "divvunspell"
required-features = ["binaries"]

[[bin]]
name = "accuracy"
required-features = ["binaries"]

[lib]
name = "divvunspell"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
memmap = "0.7.0"
byteorder = "1.3.2"
serde = "1.0.99"
serde_derive = "1.0.99"
serde-xml-rs = { version = "0.3.1", default-features = false }
serde_json = "1.0.40"
zip = { version = "0.5", default-features = false }
unic-segment = "0.9.0"
parking_lot = "0.9.0"
hashbrown = "0.6"
tempdir = "0.3.7"
lifeguard = "0.6"
smol_str = { version = "0.1.12", features = ["serde"] }
mimallocator = "0.1"

clap = { version = "2.33.0", optional = true }
csv = { version = "1.1", optional = true }
rayon = { version = "1.1.0", optional = true }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", features = ["with_rayon"], optional = true }

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[features]
binaries = ["clap", "csv", "rayon", "indicatif"]
compression = ["zip/deflate"]
