[package]
name = "divvunspell"
description = "Spell checking library for ZHFST/BHFST spellers, with case handling and tokenization support."
version = "1.0.0-beta.5"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/divvun/divvunspell"

[lib]
name = "divvunspell"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
memmap2 = "0.9.4"
byteorder = "1.3.4"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde-xml-rs = { version = "0.6.0", default-features = false }
zip = { version = "0.5", default-features = false }
unic-segment = "0.9.0"
unic-char-range = "0.9.0"
unic-char-property = "0.9.0"
unic-ucd-category = "0.9.0"
unic-emoji-char = "0.9.0"
parking_lot = "0.11.2"
hashbrown = { version = "0.11", features = ["serde"] }
lifeguard = "0.6.1"
smol_str = { version = "0.2.1", features = ["serde"] }
box-format = { version = "0.3.2", features = ["reader"], default-features = false }
itertools = "0.12.1"
strsim = "0.11.0"
log = "0.4.11"
cffi = { git = "https://github.com/cffi-rs/cffi", optional = true }
unic-ucd-common = "0.9.0"
flatbuffers = { version = "0.6.1", optional = true }
env_logger = { version = "0.11.2", optional = true }
thiserror = "1.0.20"
tempfile = "3.3.0"
fs_extra = "1.2.0"
eieio = "1.0.0"
pathos = "0.3.0"
language-tags = "0.3.2"
globwalk = "0.9.1"

[features]
compression = ["zip/deflate"]
logging = ["env_logger"]
cargo-clippy = []

# Internal features: unstable, not for external use!
internal_convert = []
internal_ffi = ["flatbuffers", "logging", "cffi"]

[workspace]
resolver = "2"
members = [
  ".",
  "cli",
  "crates/*"
]

[profile.dev]
opt-level = 1

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
