[package]
name = "divvun-fst"
description = "Spell checking library for ZHFST/BHFST spellers, with case handling and tokenization support."
version = "1.0.0-beta.7"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/divvun/divvunspell"

[lib]
name = "divvun_fst"

[workspace.dependencies]
libc = "0.2"
memmap2 = "0.9.4"
byteorder = "1.3.4"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde-xml-rs = { version = "=0.6.0", default-features = false }
zip = { version = "6.0.0", default-features = false }
unic-segment = "0.9.0"
unic-char-range = "0.9.0"
unic-char-property = "0.9.0"
unic-ucd-category = "0.9.0"
unic-emoji-char = "0.9.0"
parking_lot = "0.12.5"
hashbrown = { version = "0.16", features = ["serde"] }
lifeguard = "0.6.1"
smol_str = { version = "0.3.2", features = ["serde"] }
box-format = { version = "0.3.2", features = ["reader"], default-features = false }
itertools = "0.14.0"
strsim = "0.11.1"
log = "0.4.11"
unic-ucd-common = "0.9.0"
# env_logger = { version = "0.11.8", optional = true }
thiserror = "2.0.17"
tempfile = "3.3.0"
fs_extra = "1.2.0"
eieio = "1.0.0"
pathos = "0.3.0"
language-tags = "0.3.2"
globwalk = "0.9.1"
tracing = "0.1.37"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"

[dependencies]
libc.workspace = true
memmap2.workspace = true
byteorder.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-xml-rs.workspace = true
zip.workspace = true
unic-segment.workspace = true
unic-char-range.workspace = true
unic-char-property.workspace = true
unic-ucd-category.workspace = true
unic-emoji-char.workspace = true
parking_lot.workspace = true
hashbrown.workspace = true
lifeguard.workspace = true
smol_str.workspace = true
box-format.workspace = true
itertools.workspace = true
strsim.workspace = true
unic-ucd-common.workspace = true
thiserror.workspace = true
tempfile.workspace = true
fs_extra.workspace = true
eieio.workspace = true
pathos.workspace = true
language-tags.workspace = true
globwalk.workspace = true
tracing.workspace = true

[features]
compression = ["zip/deflate"]

# Internal features: unstable, not for external use!
internal_convert = []

[workspace]
resolver = "2"
members = [
  ".",
  "cli",
  "crates/*",
  "ffi"
]

[profile.dev]
opt-level = 1

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
