[package]
name = "divvunspell-cli"
description = "Spellchecker for ZHFST/BHFST spellers, with case handling and tokenization support."
version = "1.0.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/divvun/divvunspell"

[[bin]]
name = "divvunspell"
path = "src/main.rs"

[dependencies]
divvun-fst = { features = ["compression"], path = ".." }
tracing-subscriber = "0.3"

serde.workspace = true
serde_json.workspace = true
box-format.workspace = true
clap.workspace = true
anyhow.workspace = true
