[package]
name = "divvunspell-bin"
description = "Spellchecker for ZHFST/BHFST spellers, with case handling and tokenization support."
version = "1.0.0-beta.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/divvun/divvunspell"

[[bin]]
name = "divvunspell"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
divvunspell = { version = "1.0.0-beta.1", features = ["internal_convert", "compression"], path = "../divvunspell" }
box-format = { git = "https://github.com/bbqsrc/box" }
pretty_env_logger = "0.4.0"
gumdrop = "0.8.0"
anyhow = "1.0.32"
structopt = "0.3.17"

[features]
default = ["gpt2"]
gpt2 = ["divvunspell/gpt2"]