[package]
name = "divvunspell-tools"
version = "1.0.0-alpha.3"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "divvunspell"

[[bin]]
name = "accuracy"

[[bin]]
name = "thfst-tools"

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
divvunspell = { path = "../divvunspell", features = ["internal_convert", "compression"] }
clap = { version = "2.33.0" }
structopt = { version = "0.3.9" }
csv = { version = "1.1" }
rayon = { version = "1.3.0"}
indicatif = { git = "https://github.com/mitsuhiko/indicatif", features = ["with_rayon"] }
box_format = { git = "https://github.com/bbqsrc/box" }
tempdir = "0.3.7"
pretty_env_logger = "0.4.0"
ctor = "*"
