[package]
name = "divvunspell-tools"
version = "1.0.0-alpha.4"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "divvunspell"

[[bin]]
name = "accuracy"

[[bin]]
name = "thfst-tools"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
divvunspell = { path = "../divvunspell", features = ["internal_convert", "compression"] }
csv = { version = "1.1" }
rayon = { version = "1.3.1" }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", features = ["with_rayon"] }
box_format = { git = "https://github.com/bbqsrc/box", branch = "master" }
tempdir = "0.3.7"
pretty_env_logger = "0.4.0"
ctor = "*"
gumdrop = "0.8.0"
thiserror = "1.0.20"
anyhow = "1.0.31"
structopt = "0.3.15"
