[package]
name = "divvunspell"
version = "1.0.0-alpha.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "divvunspell"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
memmap = "0.7.0"
byteorder = "1.3.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde-xml-rs = { version = "0.3.1", default-features = false }
zip = { version = "0.5", default-features = false }
unic-segment = "0.9.0"
unic-char-range = "0.9.0"
unic-char-property = "0.9.0"
unic-ucd-category = "0.9.0"
parking_lot = "0.10.0"
hashbrown = { version = "0.7", features = ["serde"] }
tempdir = "0.3.7"
lifeguard = "0.6"
smol_str = { version = "0.1.15", features = ["serde"] }
box_format = { git = "https://github.com/bbqsrc/box", branch = "feature/ffi", default-features = false }
itertools = "0.8.2"
strsim = "0.10.0"
log = { version = "0.4.8" }
cthulhu = { git = "https://github.com/cthulhu-rs/cthulhu", branch = "feature/bytes-plus-len" }
cursed = { git = "https://github.com/cthulhu-rs/cthulhu", branch = "feature/bytes-plus-len" }
unic-ucd-common = "0.9.0"
flatbuffers = { version = "0.6.1", optional = true }

[features]
compression = ["zip/deflate"]

# Internal features: unstable, not for external use!
internal_convert = []
internal_ffi = ["flatbuffers"]
