[package]
name = "divvunspell"
description = "Spell checking library for ZHFST/BHFST spellers, with case handling and tokenization support."
version = "1.0.0-beta.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/divvun/divvunspell"

[lib]
name = "divvunspell"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
memmap = "0.7.0"
byteorder = "1.3.4"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde-xml-rs = { version = "0.4.0", default-features = false }
zip = { version = "0.5", default-features = false }
unic-segment = "0.9.0"
unic-char-range = "0.9.0"
unic-char-property = "0.9.0"
unic-ucd-category = "0.9.0"
parking_lot = "0.11.0"
hashbrown = { version = "0.9", features = ["serde"] }
tempdir = "0.3.7"
lifeguard = "0.6.1"
smol_str = { version = "0.1.16", features = ["serde"] }
box-format = { version = "0.3", features = ["reader"], default-features = false }
itertools = "0.9.0"
strsim = "0.10.0"
log = { version = "0.4.11" }
cffi = "0.1.5"
unic-ucd-common = "0.9.0"
flatbuffers = { version = "0.6.1", optional = true }
env_logger = { version = "0.7.1", optional = true }
thiserror = "1.0.20"

[features]
compression = ["zip/deflate"]
logging = ["env_logger"]

# Internal features: unstable, not for external use!
internal_convert = []
internal_ffi = ["flatbuffers", "logging"]
