[package]
name = "divvun-fst-ffi"
description = "C/C++ FFI bindings for divvun-fst library."
version = "1.0.0-beta.7"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/divvun/divvunspell"

[lib]
name = "divvun_fst"
crate-type = ["staticlib", "cdylib"]

[dependencies]
divvun-fst = { path = ".." }
cffi = { git = "https://github.com/cffi-rs/cffi", branch = "next" }
libc.workspace = true
