[package]
name = "thfst-tools"
description = "Support tools for DivvunSpell - convert ZHFST files to BHFST."
version = "1.0.0-beta.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/divvun/divvunspell"

[dependencies]
serde_json = "1.0.57"
divvunspell = { version = "1.0.0-beta.1", features = ["internal_convert", "compression"], path = "../divvunspell" }
box-format = "0.3"
tempdir = "0.3.7"
structopt = "0.3.17"
