[package]
name = "accuracy"
version = "1.0.0-beta.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "GPL-3.0"
publish = false

[dependencies]
tracing-subscriber = "0.3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
divvunspell = { features = ["internal_convert", "compression"], path = "../.." }
csv = { version = "1.1" }
rayon = { version = "1.4.0" }
indicatif = { version = "0.15", features = ["with_rayon"] }
clap = { version = "4.5", features = ["derive"] }
distance = "0.4.0"
chrono = "0.4.19"
