[package]
name = "accuracy"
version.workspace = true
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "GPL-3.0"
publish = false

[dependencies]
tracing-subscriber = "0.3"
serde.workspace = true
serde_json.workspace = true
divvun-fst = { features = ["compression"], path = "../.." }
csv = { version = "1.1" }
rayon = { version = "1.4.0" }
indicatif = { version = "0.15", features = ["with_rayon"] }
clap.workspace = true
distance = "0.4.0"
chrono = "0.4.19"
