[package]
name = "thfst-tools"
description = "Support tools for DivvunSpell - convert ZHFST files to BHFST."
version = "1.0.0-beta.3"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/divvun/divvunspell"

[dependencies]
serde_json = "1.0.57"
divvunspell = { features = ["internal_convert", "compression"], path = "../.." }
box-format = "0.3.2"
structopt = "0.3.17"
tempfile = "3"
