[package]
name = "thfst-tools"
description = "Support tools for DivvunSpell - convert ZHFST files to BHFST."
version.workspace = true
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/divvun/divvunspell"

[dependencies]
serde_json.workspace = true
divvun-fst = { features = ["compression"], path = "../.." }
box-format = { workspace = true, features = ["writer"] }
clap.workspace = true
tempfile.workspace = true
