# Standalone wasm app: its own workspace so it never resolves against the
# native divvunspell workspace one directory up.
[workspace]

[package]
name = "accuracy-viewer"
version = "1.0.0"
edition = "2024"
description = "Web viewer for divvunspell accuracy reports"
publish = false

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
gloo-net = { version = "0.7", default-features = false, features = ["http", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Storage",
    "MediaQueryList",
    "EventTarget",
]

[profile.release]
opt-level = "s"
lto = true
